k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-system
  namespace: library-system

spec:
  replicas: 2

  selector:
    matchLabels:
      app: library-system

  template:
    metadata:
      labels:
        app: library-system

    spec:
      containers:
        - name: library-system
          image: library-system:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
