k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-system
  namespace: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-system
  template:
    metadata:
      labels:
        app: library-system
    spec:
      containers:
        - name: library-system
          image: binaydev/library-system:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: library
spec:
  selector:
    app: library-system
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
